Fix hero content alignment

--- a/content/themes/dude/sass/views/_blog.scss
+++ b/content/themes/dude/sass/views/_blog.scss
@@ -232,6 +232,8 @@
 
   // Single blog post start
   &.block-hero {
+    display: flex;
+
     &.block-hero-single-blog {
       max-height: 100%;
       min-height: 400px;
